[BUGFIX] Icon alignment on insert new panel buttons
Releases: master, 1.2
Original-Commit-Hash: 98b48c29c3042fec884d42b1bd76cbcc0b80af04

--- a/TYPO3.Neos/Resources/Private/Styles/Content/_InsertNodePanel.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Content/_InsertNodePanel.scss
@@ -51,6 +51,7 @@
 				padding-right: $relatedMargin;
 				color: $blue;
 				text-align: center;
+				vertical-align: baseline;
 			}
 		}
 	}
